[package]
name = "RustHTTP"
version = "0.1.0"
edition = "2024"
authors = ["Andre Watan <andrewatan03@gmail.com>"]
description = "Modern HTTP client for API interactions with JSON parsing capabilities"
license = "MIT"
repository = "https://github.com/watan104/RustHTTP-API-Client"
keywords = ["http", "client", "api", "json", "async"]
categories = ["web-programming::http-client", "api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
url = "2.4"